# HTabs

./: .gitignore  HTabs.cabal  README.md
src/Model/: Bank.hs  Bill.hs  Cheque.hs  CreditNote.hs  Definitions.hs  Insurance.hs  Provider.hs  Receipt.hs
